[gd_scene load_steps=4 format=3 uid="uid://b68cerr67vmdd"]

[ext_resource type="Texture2D" uid="uid://21w117jl8648" path="res://Art/Inventory_slot.png" id="1_ersrd"]
[ext_resource type="Script" uid="uid://qegxow1rhioi" path="res://Scripts/inventory.gd" id="1_jbd0o"]
[ext_resource type="FontFile" uid="uid://rd8qo46nok5b" path="res://Art/ByteBounce.ttf" id="3_4v8qb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -9.0
offset_right = 8.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
script = ExtResource("1_jbd0o")

[node name="Slot1" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_ersrd")

[node name="Item1" type="TextureRect" parent="Slot1"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 32.0
offset_bottom = 33.0

[node name="Label" type="Label" parent="Slot1"]
z_index = 1
layout_mode = 0
offset_left = 27.5
offset_top = 22.5
offset_right = 42.5
offset_bottom = 33.5
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_4v8qb")

[node name="Slot2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0
texture = ExtResource("1_ersrd")

[node name="Item2" type="TextureRect" parent="Slot2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 33.0
offset_bottom = 32.0

[node name="Label2" type="Label" parent="Slot2"]
z_index = 1
layout_mode = 0
offset_left = 27.5
offset_top = 22.5
offset_right = 42.5
offset_bottom = 33.5
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_4v8qb")

[node name="Slot3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 80.0
offset_right = 120.0
offset_bottom = 40.0
texture = ExtResource("1_ersrd")

[node name="Item3" type="TextureRect" parent="Slot3"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 32.0

[node name="Label3" type="Label" parent="Slot3"]
z_index = 1
layout_mode = 0
offset_left = 27.5
offset_top = 22.5
offset_right = 42.5
offset_bottom = 33.5
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_4v8qb")

[node name="Slot4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 120.0
offset_right = 160.0
offset_bottom = 40.0
texture = ExtResource("1_ersrd")

[node name="Item4" type="TextureRect" parent="Slot4"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 33.0
offset_bottom = 32.0

[node name="Label4" type="Label" parent="Slot4"]
z_index = 1
layout_mode = 0
offset_left = 27.5
offset_top = 22.5
offset_right = 42.5
offset_bottom = 33.5
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_4v8qb")
